Fixed callback types
